Ir funkcionalitate, nav izskats

--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
     </div>
     <div id="popUp">
       <form id="form">
-        <h2>Pievienot jaunu preci</h2>
+        <h2 id="pievienotJaunu">Pievienot jaunu preci</h2>
         <input type="text" id="nosaukums" placeholder="Nosaukums" />
+        <input type="text" id="daudzums" placeholder="Daudzums" />
         <button type="submit" id="pievienotPreci">Pievienot</button>
       </form>
     </div>
 
     <div id="saraksts"></div>
 
-    <script src="js/app.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
